# skynet-substrate

./: Cargo.toml  Makefile  README.md
.github/: CODEOWNERS
.github/workflows/: test.yml
docs/: all.html  constant.HASH_LENGTH.html  constant.PRIVATE_KEY_LENGTH.html  crates.js  enum.DownloadError.html  enum.GetEntryError.html  enum.PinError.html  enum.RequestError.html  enum.SetEntryError.html  enum.UploadError.html  fn.set_entry_data.html  index.html  search-index.js  settings.html  sidebar-items.js  source-files.js  struct.DownloadOptions.html  struct.GetEntryOptions.html  struct.RegistryEntry.html  struct.SetEntryOptions.html  struct.SignedRegistryEntry.html  struct.UploadOptions.html  type.Signature.html
docs/crypto/: constant.HASH_LENGTH.html  type.Signature.html
docs/download/: fn.download_bytes.html
docs/implementors/core/cmp/: trait.PartialEq.js
docs/implementors/core/convert/: trait.From.js
docs/implementors/core/default/: trait.Default.js
docs/implementors/core/fmt/: trait.Debug.js
docs/implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
docs/implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
docs/pin/: enum.PinError.html  fn.pin_skylink.html
docs/registry/: enum.GetEntryError.html  enum.SetEntryError.html  fn.get_entry_link.html  fn.set_entry_data.html  struct.GetEntryOptions.html
docs/skynet_substrate/: all.html  constant.DEFAULT_PORTAL_URL.html  constant.HASH_LENGTH.html  constant.PRIVATE_KEY_LENGTH.html  constant.PUBLIC_KEY_LENGTH.html  constant.SIGNATURE_LENGTH.html  constant.URI_SKYNET_PREFIX.html  enum.DownloadError.html  enum.GetEntryError.html  enum.PinError.html  enum.RequestError.html  enum.SetEntryError.html  enum.UploadError.html  fn.download_bytes.html  fn.get_entry.html  fn.get_entry_link.html  fn.pin_skylink.html  fn.set_data_link.html  fn.set_entry.html  fn.set_entry_data.html  fn.upload_bytes.html  index.html  sidebar-items.js  struct.CommonOptions.html  struct.DownloadOptions.html  struct.GetEntryOptions.html  struct.RegistryEntry.html  struct.SetEntryOptions.html  struct.SignedRegistryEntry.html  struct.UploadOptions.html  type.Signature.html
docs/skynet_substrate/crypto/: constant.PRIVATE_KEY_LENGTH.html  constant.PUBLIC_KEY_LENGTH.html  constant.SIGNATURE_LENGTH.html
docs/skynet_substrate/download/: enum.DownloadError.html  struct.DownloadOptions.html
docs/skynet_substrate/registry/: fn.get_entry.html  fn.set_data_link.html  fn.set_entry.html  struct.RegistryEntry.html  struct.SetEntryOptions.html  struct.SignedRegistryEntry.html
docs/skynet_substrate/request/: constant.DEFAULT_PORTAL_URL.html  enum.RequestError.html  struct.CommonOptions.html
docs/skynet_substrate/upload/: fn.upload_bytes.html  struct.UploadOptions.html
docs/skynet_substrate/util/: constant.URI_SKYNET_PREFIX.html
docs/src/skynet_substrate/: crypto.rs.html  download.rs.html  encoding.rs.html  lib.rs.html  pin.rs.html  registry.rs.html  request.rs.html  skylink.rs.html  upload.rs.html  util.rs.html
docs/upload/: enum.UploadError.html
src/: crypto.rs  download.rs  encoding.rs  lib.rs  pin.rs  registry.rs  request.rs  skylink.rs  upload.rs  util.rs
