[package]
name = "skynet-substrate"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = { version = "0.13", default-features = false }
bytes = { version = "1.1", default-features = false }
ed25519-dalek = { version = '1.0', default-features = false, features = [
	"alloc",
	"u64_backend",
] }
getrandom = { version = "0.2", default-features = false, features = ["js"] }
serde = { version = '1.0', default-features = false, features = ['derive'] }
serde_json = { version = '1.0', default-features = false, features = ['alloc'] }

# Substrate packages

sp-core = { version = "4.1.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git' }
sp-core-hashing = { version = "4.0.0", default-features = false, git = 'https://github.com/paritytech/substrate.git' }
sp-io = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git' }
sp-runtime = { version = "4.0.0", default-features = false, git = 'https://github.com/paritytech/substrate.git' }
sp-std = { version = "4.0.0", default-features = false, git = 'https://github.com/paritytech/substrate.git' }

[features]
default = ['std']
std = [
    'base64/std',
    'bytes/std',
    'ed25519-dalek/std',
    'getrandom/std',
    'serde/std',
    'serde_json/std',

    'sp-core/std',
    'sp-core-hashing/std',
    'sp-io/std',
    'sp-runtime/std',
	'sp-std/std',
]
