[package]
name = "skynet-substrate"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = { version = "0.13", default-features = false }
bytes = { version = "1.1", default-features = false }
ed25519-dalek = { version = '1.0', default-features = false, features = [
	"alloc",
	"u64_backend",
] }
getrandom = { version = "0.2", default-features = false, features = ["js"] }
serde = { version = '1.0', default-features = false, features = ['derive'] }
serde_json = { version = '1.0', default-features = false, features = ['alloc'] }

# Substrate packages

# The dependencies have to be pinned to a specific tag and the runtime must be
# built off the same tag. It won't work otherwise -- I was getting "duplicate
# lang item" errors.

sp-core = { version = "4.1.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = "monthly-2022-01" }
sp-core-hashing = { version = "4.0.0", default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = "monthly-2022-01" }
sp-io = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = "monthly-2022-01" }
sp-runtime = { version = "4.0.0", default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = "monthly-2022-01" }
sp-std = { version = "4.0.0", default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = "monthly-2022-01" }

[features]
default = ['std']
std = [
    'base64/std',
    'bytes/std',
    'ed25519-dalek/std',
    'getrandom/std',
    'serde/std',
    'serde_json/std',

    'sp-core/std',
    'sp-core-hashing/std',
    'sp-io/std',
    'sp-runtime/std',
	'sp-std/std',
]
